--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
         <head>
             <title>Everyone Can Get Rich - Simple Interest Calculator</title>
-            <script src="https://github.com/ivanhern3868/IBM_Test/blob/master/script.js"></script>
+            <script src="script.js"></script>
             <link rel="stylesheet" href="style.css">
         </head>
 
