--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
         <head>
-            <title>Web App – Simple Interest Calculator</title>
+            <title>Everyone Can Get Rich - Simple Interest Calculator</title>
             <script src="script.js"></script>
             <link rel="stylesheet" href="style.css">
         </head>
@@ -31,7 +31,7 @@
                         <option value="10">10</option>
                         </select>  <br><br>
                         
-        <button onclick="compute();">Compute Interest</button><br><br><br>
+        <button onclick="preVal()">Compute Interest</button><br><br><br>
         <output id="result"></output>
     
         </div>
